kubernetes/kplk8s/Domain 6 - Cluster Architecture, Installation & Configuration/pod-1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fit-pod
spec:
  containers:
  - name: successful-container
    image: nginx
    resources:
      requests:
        memory: "654Mi"
        cpu: "198m"
      limits:
        memory: "654Mi"
        cpu: "198m"
