kubernetes/kplk8s/Domain 6 - Cluster Architecture, Installation & Configuration/pod-2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: squish-pod
spec:
  containers:
  - name: fail-container
    image: nginx
    resources:
      requests:
        memory: "10Mi"
        cpu: "10m"
      limits:
        memory: "10Mi"
        cpu: "10m"
