kubernetes/kplk8s/Domain 6 - Cluster Architecture, Installation & Configuration/base-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: base-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
