kubernetes/kplk8s/Domain 6 - Cluster Architecture, Installation & Configuration/example-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-2
spec: 
  podSelector: {}
  ingress: 
  - {}
  policyTypes:
  - Ingress
  - Egress
