kubernetes/kplk8s/Domain 6 - Cluster Architecture, Installation & Configuration/example-3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: suspicious-pod
spec: 
  podSelector: 
    matchLabels:
      role: suspicious
  ingress: 
  - {}
  policyTypes:
  - Ingress
  - Egress
