kubernetes/kplk8s/Domain 6 - Cluster Architecture, Installation & Configuration/example-4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-4
spec:
  podSelector:
    matchLabels:
      role: database
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: app
  policyTypes:
  - Ingress
