kubernetes/kplk8s/Domain 6 - Cluster Architecture, Installation & Configuration/example-6.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: example-6.yaml
  namespace: production
spec:
  podSelector: {}
  egress:
  - to:
    - ipBlock:
        cidr: 8.8.8.8/32
  policyTypes:
  - Egress
